SSl Creation/gateway-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-lb
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
