SSl Creation/gateway-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-cert-ingress
spec:
  rules:
  - host: "api.westerntravellers.com"
    http:
      paths:
       - path: /*
         pathType: ImplementationSpecific
         backend:
          service:
             name: gateway-service-svc
             port:
               number: 80
