SSl Creation/managed-cert-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: westernstaticip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      # - path: /*
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: gateway-service-svc
      #       port:
      #         number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: western-front-ui-svc  
            port:
              number: 80
      # - path: /EmployeePortal
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: westernbackendui-svc
      #       port:
      #         number: 80
