SSl Creation/nginx.yaml

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: westernstaticip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: "westerntravellers.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
